@@ -1,4 +1,3 @@
-#! /usr/local/bin/perl
 
 use ExtUtils::MakeMaker;
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
