@@ -7,6 +7,7 @@ SYNOPSIS
             $block = new Net::Netmask (network block)
             $block = new Net::Netmask (network block, netmask)
 
+            print $block->desc()            # a.b.c.d/bits
             print $block->base() 
             print $block->mask() 
             print $block->hostmask() 
